<resources>
    <string name="app_name">Multiplication Learning</string>
    <string name="username">Username</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="passphrase">Passphrase</string>
    <string name="password">Password</string>
    <string name="classid">Class ID</string>
    <string name="teacher">As Teacher</string>
    <string name="student">As Student</string>
    <string name="email">E-mail</string>
    <string name="create_account">Create an account?</string>
    <string name="create_student">Are you a Student?</string>
    <string name="create_teacher">Are you a Teacher?</string>
    <string name="have_account">Have already an account?</string>
    <string name="auth_fail">Authentication failed</string>
    <string name="empty_error">The fields are empty</string>
    <string name="success_sign_in">Signed In successfully!</string>
    <string name="success_student">Student signed up successfully!</string>
    <string name="pass_not_match">Your password does not match</string>
    <string name="log_out">No account found</string>
    <string name="select_subject">Select Subject</string>
    <string name="number_zero">Number 0</string>
    <string name="number_one">Number 1</string>
    <string name="number_two">Number 2</string>
    <string name="number_three">Number 3</string>
    <string name="number_four">Number 4</string>
    <string name="number_five">Number 5</string>
    <string name="number_six">Number 6</string>
    <string name="number_seven">Number 7</string>
    <string name="number_eight">Number 8</string>
    <string name="number_nine">Number 9</string>
    <string name="score">Score:</string>
    <string name="review1">Review 1</string>
    <string name="review2">Review 2</string>
    <string name="review3">Review 3</string>
    <string name="reviews">Reviews</string>
    <string name="final_review">Final Review</string>
    <string name="help">Help</string>
    <string name="hello_teacher_name">Hello</string>
    <string name="my_classes">My Classes</string>
    <string name="create_class">Create Class</string>
    <string name="student_stats">Student Stats</string>
    <string name="lessons">Lessons</string>
    <string name="create_students">Create Student</string>
    <string name="logout_success">You have successfully logged out</string>
    <string name="class_name">Class Name</string>
    <string name="class_id">Class ID</string>
    <string name="create">Create</string>
    <string name="create_your_class">Create your Class</string>
    <string name="number5">Number 5</string>
    <string name="see_video">See the Video!</string>
    <string name="class_exists">That class already exists!</string>
    <string name="class_success">The class created succeessfully.</string>
    <string name="class_failed">The creation of the class failed.</string>
    <string name="class_does_not_exist">That class does not exists!</string>
    <string name="progress">Your progress saved successfully</string>
    <string name="warning">You must answer at all questions</string>
    <string name="perfect"> Perfect [A\'] </string>
    <string name="excellent"> Excellent [A] </string>
    <string name="good"> Good [B] </string>
    <string name="poor"> Poor [C] </string>
    <string name="zeroProgress"> 0% </string>
    <string name="noTitle"> - </string>
    <string name="name">Name</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="must_complete">You must complete the test first</string>
    <string name="logout">Logout</string>
    <string name="back_press_exit">Press back again to exit</string>
    <string name="lesson_continue">You must score higher to continue to the next lesson</string>
    <string name="create_class_students_first">Create class or/and student</string>
    <string name="wrongs">Wrongs</string>
    <string name="none">None</string>
</resources>