<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_orange"
    tools:context=".MiniTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="30dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_teacher_my_classes"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/my_classes"
                    android:fontFamily="@font/riffic"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    android:padding="30dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_teacher_create_class"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/create_class"
                    android:fontFamily="@font/riffic"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    android:padding="30dp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_teacher_student_statistics"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/student_stats"
                    android:fontFamily="@font/riffic"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    android:padding="30dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_teacher_create_student"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/create_students"
                    android:fontFamily="@font/riffic"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    android:padding="30dp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_hello_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_teacher_name"
        android:fontFamily="@font/riffic"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"/>

    <ImageView
        android:id="@+id/btn_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_help"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/help" />

</RelativeLayout>